# better_c_std

./: CMakeLists.txt  README.md
examples/: 01.c  02.c  03.c  CMakeLists.txt
include/better_c_std/: allocator.h  common_vecs.h  get_executable_dir.h  io.h  mem_region.h  other.h  pipe.h  prettify.h  prettify_c.h  result.h  string.h  time.h  vector.h  weak.h
include/better_c_std/camera/: camera.h  intgr_exp_value.h  vec23.h
include/better_c_std/io/: buffer_out_stream.h  out_stream.h  print.h  print_arg.h  printable.h  printer.h  va_list.h  x_printf.h
include/better_c_std/io/printers/: integers.h
include/better_c_std/prettify/: assert.h  debug.h  misc.h  panic.h  term_colors.h
include/better_c_std/string/: str.h  str_slice.h  str_struct.h  str_t.h  str_t_raw.h  string_stream.h  vec_str.h  vec_str_t.h
src/: allocator.c  common_vecs.c  debug.c  get_executable_dir.c  mem_region.c  other.c  pipe.c  printf_extensions.c  time.c
src/camera/: camera.c
src/io/: buffer_out_stream.c  out_stream.c  print.c  printable.c  printer.c  x_printf.c
src/io/printers/: integers.h
src/string/: str.c  str_slice.c  str_t.c  string_stream.c
